--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docmate",
-  "proxy": "http://localhost:8080",
+  "proxy": "https://docmate-backend-btox.onrender.com",
   "version": "0.1.0",
   "private": true,
   
